# librdx

./: $.h  $.md  $test.c  $x.h  .be  .clang-format  .gitignore  .gitmodules  01.h  ABC.h  ABC.md  AREN.h  B.h  B.md  BIN.h  BIN.md  Btest.c  Bx.h  CLAUDE.md  CMakeLists.txt  CNAME  COMB.h  COMBx.h  FILE.h  FILE.md  FILEtest.c  HASH.h  HASH.md  HASHx.h  HEAP.md  HEAPx.h  HEX.h  HEX.md  HTTP.c  HTTP.h  INDEX.md  INT.h  INT.md  JSON.c  JSON.h  (+84 more)
abc/: $.h  $.md  $x.h  01.h  ABC.h  ABC.hpp  ANSI.h  AREA.h  AREN.h  AREN.md  B.h  B.md  BIN.h  BIN.md  BSD.c  BSD.h  BUF.h  Bx.h  C.md  CMakeLists.txt  COMB.h  COMB.md  CT.c  CT.h  CT.md  CURL.c  CURL.h  DIFF.h  DIFFx.h  DIJK.h  DIJKx.h  DNS.h  FILE.c  FILE.h  FILE.md  HASH.h  HASH.md  HASHx.h  HEAP.md  HEAPx.h  (+118 more)
abc/bench/: CMakeLists.txt  HEAP.cpp  QSORT.cpp  SORT.cpp
abc/fuzz/: CMakeLists.txt  DIFF.c  HASH.cpp  HASHd.c  HEAP.c  HIT.c  MSET.c  NFA.c  QSORT.c  SLOG.c  SORT.c  URI.c  ZINT.c  ZINT2.c
abc/test/: $.c  01.c  AREA.c  AREN.c  B.c  BIN.c  BSD.c  CMakeLists.txt  COMB.c  CT.c  CURL.c  DIFF.c  DIJK.c  DNS.c  FILE.c  HASH.c  HEAP.c  HIT.c  HTTP.c  INT.c  JSON.c  LINE.c  LIST.c  LSM.c  MMAP.c  MSET.c  NACL.c  NEST.c  NFA.c  NFApcre2.c  NUM.c  PACK.c  PACKfile.c  PAGE.c  PATH.c  PIOL.c  POL.c  POLL.c  PRO.c  QSORT.c  (+15 more)
ast/: BAST.c  BAST.cli.c  BAST.h  CMakeLists.txt  CSS.c  CSS.c.rl  CSS.h  CSS.lex  CSS.plan.md  CSS.rl.c  HILI.h  INDEX.md  SPOT.c  SPOT.h  astok.cli.c
ast/c/: parser.c
ast/embedded-template/: parser.c
ast/fuzz/: CMakeLists.txt  CSS.c  SPOT.c
ast/go/: parser.c
ast/java/: parser.c
ast/jsdoc/: parser.c
ast/markdown/: parser.c  scanner.c
ast/markdown-inline/: parser.c  scanner.c
ast/python/: parser.c
ast/sm/: SM.c  SM.c.rl  SM.h  SM.lex  SM.rl.c  SMI.c.rl  SMI.h  SMI.lex  SMI.rl.c
ast/test/: BAST.c  CMakeLists.txt  CSS.c  SPOT.c  SPOTre.c
be/: BE.c  BE.cli.c  BE.h  BE.http.c  BESRV.c  BESRV.h  BESYNC.c  BESYNC.h  CLI.md  CMakeLists.txt  GREP.c  HTTP.md  IGNO.c  IGNO.h  INDEX.md  README.md  STORE.md  URI.md  VER.c  VER.h  be.cli.c
be/test/: BE.c  BESRV.c  BESYNC.c  CMakeLists.txt  VER.c  cli-test.sh
beagle/: BE.cli.c  CMakeLists.txt  GURI.c  GURI.h  GURI.md  README.md
beagle/test/: CMakeLists.txt  GURI.c  blobs-from-git.sh  clone-from-git.sh  clone-from-keeper.sh  clone-git.sh  diff-revs.sh  history.sh  mill-last10.sh  mill-mother.sh  mill-tags.sh  mill-toy.sh  mill.sh  roundtrip.sh  spot-versions.sh  tag-blobs-from-keeper.sh  tags-from-git.sh  tags-from-keeper.sh  verify-canonical-refs.sh  workflow.sh  worktree.sh
brix/: BRIX.c  BRIX.cli.c  BRIX.h  CMakeLists.txt  FLY.c  FLY.cli.c  FLY.h  METHOD.md  MISSION.md  README.cli.md  README.md  TAG.h  WAL.c  WAL.h  WAL.md
brix/test/: BRIX.c  CMakeLists.txt
bro/: BRO.c  BRO.cli.c  BRO.exe.c  BRO.h  CAT.c  CMakeLists.txt  INDEX.md  MAUS.c  MAUS.c.rl  MAUS.h  MAUS.rl.c  README.md
bro/test/: CMakeLists.txt  NAV.c  (+2 more)
capo/: CAPO.c  CAPO.cli.c  CAPO.h  CMakeLists.txt  README.md
cli/: CMakeLists.txt  LEX.c  RDX.c  README.md
dog/: AGDT.c  AGDT.h  AGDT.rl.c  AT.c  AT.h  BRCT.h  CLI.c  CLI.h  CLJT.c  CLJT.c.rl  CMKT.c  CMKT.h  CMKT.rl.c  CMakeLists.txt  CPPT.c  CPPT.h  CPPT.rl.c  CSST.c  CSST.c.rl  CSST.rl.c  CST.c  CST.c.rl  CT.c  CT.c.rl  CT.h  CT.rl.c  DARTT.c  DARTT.h  DEF.c  DEF.h  DKFT.c  DKFT.c.rl  DKFT.h  DKFT.rl.c  DOG.c  DOG.h  DOG.md  DPATH.c.rl  DPATH.h  DPATH.rl.c  (+156 more)
dw/: CLEX.c  CLEX.c.rl  CLEX.cli.c  CLEX.h  CLEX.lex  CLEX.rl.c  CMakeLists.txt
graf/: BLAME.c  BLOB.c  BLOB.h  CMakeLists.txt  DAG.c  DAG.h  DIFF.c  DIFFREF.c  GET.c  GET.md  GRAF.c  GRAF.cli.c  GRAF.exe.c  GRAF.h  INDEX.c  INDEX.md  INST.c  JOIN.c  JOIN.h  MERGE.c  NEIL.c  NEIL.h  TDIFF.c  TDIFF.h  WEAVE.c  WEAVE.h
js/: CMakeLists.txt  JABC.h  JABC.hpp  JS.h  README.md  brix.cpp  convert.cpp  io.c  io.cpp  io.js  io.js.c  js2c.js  main.c  main.cpp  rdx.cpp  test.cpp  test.js  test.js.c  utf8.c  utf8.cpp
json/: BASON.c  BASON.h  BIFF.c  BIFF.h  CMakeLists.txt  INDEX.md  PASS.c  PASS.h  README.md  TLKV.h  bason.cli.c  biff.cli.c  borge.cli.c
keeper/: BELT.c  BELT.h  BELT.md  CMakeLists.txt  DELT.c  DELT.h  GIT.c  GIT.h  INDEX.md  KEEP.c  KEEP.cli.c  KEEP.exe.c  KEEP.h  LOG.md  PACK.c  PACK.h  PATHS.c  PATHS.h  PKT.c  PKT.h  PSTR.c  PSTR.h  README.md  RECV.c  RECV.h  REF.md  REFADV.c  REFADV.h  REFS.c  REFS.h  SHA1.c  SHA1.h  SYNC.c  SYNC.h  SYNC.md  UNPK.c  UNPK.h  WALK.c  WALK.h  WIRE.c  (+6 more)
mark/: CMakeLists.txt  MARK.c  MARK.cli.c  MARK.h  MARK.lex  MARK.md  MARK.rl  MARK.rl.c  MARK.rl.h  MARKhtml.cli.c  MARQ.c  MARQ.h  MARQ.lex  MARQ.rl  MARQ.rl.c  MARQ.rl.h
rdx/: BRIX2.c  BRIX2.h  CLI.c  CLI.h  CLI.md  CMakeLists.txt  DIFF.c  JDR.c  JDR.c.rl  JDR.h  JDR.lex  JDR.md  JDR.rl  JDR.rl.c  JDR.rl.h  JDR2.c  JDR2.h  LSM.c  LSM.h  LSM.md  MAN.h  RAP.c  RB.c  RB.h  RDOM.h  RDX.c  RDX.cli.c  RDX.cli.md  RDX.h  RDX.hpp  RDX.md  RDX1.h  RDX2.c  RDX2.h  RDXC.h  RDXJ.c  RDXJ.h  RDXJ.lex  RDXJ.rl  RDXJ.rl.c  (+20 more)
sniff/: AT.c  AT.h  AT.md  CHE.c  CHE.h  CMakeLists.txt  COM.c  COM.h  DEL.c  DEL.h  GET.c  GET.h  INDEX.md  LS.c  LS.h  PATCH.c  PATCH.h  POST.c  POST.h  PUT.c  PUT.h  SNIFF.c  SNIFF.cli.c  SNIFF.exe.c  SNIFF.h  STAGE.c  STAGE.h  STAGE.md
spot/: CAPO.c  CAPO.cli.c  CAPO.exe.c  CAPO.h  CAPOi.h  CAT.c  CMakeLists.txt  DIF2.c  GREP.c  HUNK.c  HUNK.h  INDEX.md  INST.c  INST.h  LESS.c  LESS.h  NEIL.c  NEIL.h  NEIL.md  README.md  RXLITS.c.rl  RXLITS.h  RXLITS.rl.c  SPOT.c  SPOT.h  version.cmake
test/: $.c  01.c  AREN.c  B.c  BIN.c  CMakeLists.txt  COMB.c  FILE.c  HASH.c  HEAP.c  HTTP.c  INT.c  LIST.c  LSM.c  MARK.c  MARQ.c  MMAP.c  PRO.c  RDX.c  RDX1.c  RDX1.rdx  RDXJ.c  RDXY.E.rdxj  RDXY.FIRST.rdxj  RDXY.X.rdxj  RDXY.c  RDXY.rdx  RDXY.rdxj  RDXZ.c  RDXZ.rdx  RDXZ.rdxj  SHA.c  SKIP.c  TCP.c  TLV.c  UDP.c  UTF8.c  ZINT.c
tok/: AGDT.c  AGDT.c.rl  BRCT.c  BRCT.h  BRCT.md  CLJT.c  CLJT.h  CLJT.rl.c  CMKT.c  CMKT.c.rl  CMakeLists.txt  CPPT.c  CPPT.c.rl  CSST.c  CSST.c.rl  CSST.h  CSST.rl.c  CST.c  CST.h  CST.rl.c  CT.c  DARTT.c  DARTT.c.rl  DARTT.rl.c  DEF.c  DEF.h  DEF.md  DKFT.c  DT.c  DT.c.rl  ELXT.c  ELXT.c.rl  ELXT.h  ELXT.rl.c  ERLT.c  ERLT.rl.c  FORT.c  FORT.h  FSHT.c  FSHT.c.rl  (+119 more)
(+261 files in other folders)
